// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BugsList component with bug data 1`] = `
<DocumentFragment>
  <div
    class="bug-list-item"
  >
    <div
      class="bug-list-item__title-cls"
    >
      <h3>
        Bug title
      </h3>
      <p
        class="medium"
      >
        medium
      </p>
    </div>
    <p
      class="bug-list-item__description"
    >
      Bug description...
    </p>
    <div
      class="bug-list-item__user-time"
    >
      <p>
        admin
      </p>
      <p>
        now
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BugsList component without bug data 1`] = `
<DocumentFragment>
  <div
    class="bug-list-item"
  >
    <div
      class="bug-list-item__title-cls"
    >
      <h3 />
      <abbr
        title="Not Active Anymore"
      >
        <p
          class="not-active"
        >
          N.A
        </p>
      </abbr>
    </div>
    <p
      class="bug-list-item__description"
    >
      ...
    </p>
    <div
      class="bug-list-item__user-time"
    >
      <p />
      <p />
    </div>
  </div>
</DocumentFragment>
`;
